# polish-constitution-as-code

./: README.md  pyproject.toml
akn/: konstytucja_rp.xml
examples/: demo.py
src/konstytucja/: __init__.py  chapter_01_republic.py  chapter_02_rights.py  chapter_03_sources_of_law.py  chapter_04_sejm_senate.py  chapter_05_president.py  chapter_06_council_of_ministers.py  chapter_07_local_government.py  chapter_08_courts.py  chapter_09_oversight.py  chapter_10_public_finances.py  chapter_11_emergency.py  chapter_12_amendments.py  legislative_process.py
src/konstytucja/common/: __init__.py  errors.py  types.py  voting.py
tests/: conftest.py  test_chapter_01_republic.py  test_chapter_02_rights.py  test_chapter_03_sources_of_law.py  test_chapter_04_sejm_senate.py  test_chapter_05_president.py  test_chapter_06_council_of_ministers.py  test_chapter_07_local_government.py  test_chapter_08_courts.py  test_chapter_09_oversight.py  test_chapter_10_public_finances.py  test_chapter_11_emergency.py  test_chapter_12_amendments.py  test_common_voting.py  test_legislative_process.py
